<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/layout_woods">


    <TextView
        android:id="@+id/textViewWoodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/WOODS_TYPE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWoodsColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/WOODS_COLOR"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewWoodType"
        app:layout_constraintTop_toBottomOf="@+id/textViewWoodType" />

    <TextView
        android:id="@+id/textViewWoodsTypeChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWoodType"
        app:layout_constraintStart_toEndOf="@+id/textViewWoodType"
        app:layout_constraintTop_toTopOf="@+id/textViewWoodType" />

    <TextView
        android:id="@+id/textViewWoodsColorChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWoodsColor"
        app:layout_constraintStart_toEndOf="@+id/textViewWoodsColor"
        app:layout_constraintTop_toTopOf="@+id/textViewWoodsColor" />

    <TextView
        android:id="@+id/textViewWoodsSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/WOODS_SIZE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewWoodsColor"
        app:layout_constraintTop_toBottomOf="@+id/textViewWoodsColor" />

    <TextView
        android:id="@+id/textViewWoodsSizeChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWoodsSize"
        app:layout_constraintStart_toEndOf="@+id/textViewWoodsSize"
        app:layout_constraintTop_toTopOf="@+id/textViewWoodsSize" />

    <TextView
        android:id="@+id/textViewWoodsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/WOODS_QUANTITY"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewWoodsSize"
        app:layout_constraintTop_toBottomOf="@+id/textViewWoodsSize" />

    <TextView
        android:id="@+id/textViewWoodsQuantityChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWoodsQuantity"
        app:layout_constraintStart_toEndOf="@+id/textViewWoodsQuantity"
        app:layout_constraintTop_toTopOf="@+id/textViewWoodsQuantity" />
</androidx.constraintlayout.widget.ConstraintLayout>