<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/layout_woods">


    <TextView
        android:id="@+id/textViewOrdersType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/WOODS_TYPE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOrdersColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/WOODS_COLOR"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewOrdersType"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrdersType" />

    <TextView
        android:id="@+id/textViewOrdersTypeChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewOrdersType"
        app:layout_constraintStart_toEndOf="@+id/textViewOrdersType"
        app:layout_constraintTop_toTopOf="@+id/textViewOrdersType" />

    <TextView
        android:id="@+id/textViewOrdersColorChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewOrdersColor"
        app:layout_constraintStart_toEndOf="@+id/textViewOrdersColor"
        app:layout_constraintTop_toTopOf="@+id/textViewOrdersColor" />

    <TextView
        android:id="@+id/textViewOrdersSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/WOODS_SIZE"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewOrdersColor"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrdersColor" />

    <TextView
        android:id="@+id/textViewOrdersSizeChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewOrdersSize"
        app:layout_constraintStart_toEndOf="@+id/textViewOrdersSize"
        app:layout_constraintTop_toTopOf="@+id/textViewOrdersSize" />

    <TextView
        android:id="@+id/textViewOrdersQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/WOODS_QUANTITY"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewOrdersSize"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textViewOrdersQuantityChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewOrdersQuantity"
        app:layout_constraintStart_toEndOf="@+id/textViewOrdersQuantity"
        app:layout_constraintTop_toTopOf="@+id/textViewOrdersQuantity" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/woods_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewOrdersQuantity"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrdersSize" />

    <TextView
        android:id="@+id/textViewOrdersStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ORDERS_STREET_DOOTS"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewOrdersQuantity"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrdersQuantity" />

    <TextView
        android:id="@+id/textViewOrdersStreetChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewOrdersStreet"
        app:layout_constraintStart_toEndOf="@+id/textViewOrdersStreet"
        app:layout_constraintTop_toTopOf="@+id/textViewOrdersStreet" />

</androidx.constraintlayout.widget.ConstraintLayout>