<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.WoodsDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAddOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/WOODS_ORDER"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ORDERS_STREET"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <EditText
            android:id="@+id/editTextStreetChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ORDERS_STREET"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/include"
            app:layout_constraintStart_toStartOf="@+id/textViewStreet"
            app:layout_constraintTop_toBottomOf="@+id/textViewStreet" />

        <TextView
            android:id="@+id/textViewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ORDERS_QUANTITY"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextStreetChange"
            app:layout_constraintTop_toBottomOf="@+id/editTextStreetChange" />

        <EditText
            android:id="@+id/editTextQuantityChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ORDERS_QUANTITY"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextStreetChange"
            app:layout_constraintStart_toStartOf="@+id/textViewQuantity"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuantity" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ORDERS_SIZE"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextQuantityChange"
            app:layout_constraintTop_toBottomOf="@+id/editTextQuantityChange" />

        <EditText
            android:id="@+id/editTextSizeChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ORDERS_SIZE"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextQuantityChange"
            app:layout_constraintStart_toStartOf="@+id/textViewStatus"
            app:layout_constraintTop_toBottomOf="@+id/textViewStatus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>